[feat] add video meta and apply api
